--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             // Simple animation and redirect
             this.style.transform = 'scale(0.98)';
             setTimeout(() => {
-                window.location.href = 'apply.html';
+                window.location.href = 'eligibility.html';
             }, 150);
         });
     </script>
