--- a/dash.html
+++ b/dash.html
@@ -287,7 +287,7 @@
           </div>
           <div class="detail-item">
             <div class="detail-label">Disbursement Time</div>
-            <div class="detail-value">Within 5 minutes</div>
+            <div class="detail-value">Within 5 mins to 48hrs</div>
           </div>
           <div class="detail-item">
             <div class="detail-label">Due Date</div>
